<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Weather</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="place_not_found">Sorry, no weather data found.</string>
    <string name="open_weather_maps_app_id">12345</string>
    <string name="current_location">Current Location</string>
    <string name="custom_location">Custom Location</string>
    <string name="enter_city">Enter City</string>
    <string name="location_disabled"> Location Services Disabled</string>
    <string name="no_updates">No Updates available</string>
    <string name="check_internet">Check your internet connection.</string>
    <string name="update">Update</string>
    <string name="humidity">Humidity</string>
    <string name="pressure">Pressure</string>
    <string name="max">Max</string>
    <string name="min">Min</string>

</resources>