<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center_horizontal"
    android:background="@color/home_background"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/date_time"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/date_marginleft"
        android:gravity="start"
        android:padding="@dimen/date_padding"
        android:text="@string/no_updates"
        android:textColor="@color/date_text_color"
        android:textSize="@dimen/date_size" />

    <ImageView
        android:id="@+id/weather_icon"
        android:layout_width="@dimen/image_h_w"
        android:layout_height="@dimen/image_h_w"
        android:layout_gravity="center"
        android:scaleType="fitXY" />

    <TextView
        android:id="@+id/temp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/temp_margintop"
        android:fontFamily="sans-serif"
        android:gravity="center_horizontal"
        android:textColor="@color/temp_text_color"
        android:textSize="@dimen/temp_size" />

    <TextView
        android:id="@+id/location"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/date_padding"
        android:layout_marginRight="@dimen/date_padding"
        android:layout_marginTop="15dp"
        android:gravity="center_horizontal"
        android:text="@string/check_internet"
        android:textColor="@color/loc_text_color"
        android:textSize="@dimen/details_size" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:layout_marginTop="@dimen/divider_marginTop"
        android:background="@color/divider_color" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/date_padding"
        android:layout_marginRight="@dimen/date_padding"
        android:orientation="horizontal" >

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="left"
            android:text="@string/update"
            android:textColor="@color/details_color"
            android:textSize="@dimen/details_size" >
        </TextView>

        <TextView
            android:id="@+id/desc"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="left"
            android:textColor="@color/details_color"
            android:textSize="@dimen/details_size" >
        </TextView>
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:background="@color/divider_color" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/date_padding"
        android:layout_marginRight="@dimen/date_padding"
        android:orientation="horizontal" >

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="left"
            android:text="@string/humidity"
            android:textColor="@color/details_color"
            android:textSize="@dimen/details_size" >
        </TextView>

        <TextView
            android:id="@+id/humidity"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="left"
            android:textColor="@color/details_color"
            android:textSize="@dimen/details_size" >
        </TextView>
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:background="@color/divider_color" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/date_padding"
        android:layout_marginRight="@dimen/date_padding"
        android:orientation="horizontal" >

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="left"
            android:text="@string/pressure"
            android:textColor="@color/details_color"
            android:textSize="@dimen/details_size" >
        </TextView>

        <TextView
            android:id="@+id/pressure"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="left"
            android:textColor="@color/details_color"
            android:textSize="@dimen/details_size" >
        </TextView>
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:background="@color/divider_color" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/date_padding"
        android:layout_marginRight="@dimen/date_padding"
        android:orientation="horizontal" >

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="left"
            android:text="@string/max"
            android:textColor="@color/details_color"
            android:textSize="@dimen/details_size" >
        </TextView>

        <TextView
            android:id="@+id/max_temp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="start"
            android:textColor="@color/details_color"
            android:textSize="@dimen/details_size" >
        </TextView>
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:background="@color/divider_color" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/date_padding"
        android:layout_marginRight="@dimen/date_padding"
        android:orientation="horizontal" >

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="start"
            android:text="@string/min"
            android:textColor="@color/details_color"
            android:textSize="@dimen/details_size" >
        </TextView>

        <TextView
            android:id="@+id/min_temp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="start"
            android:textColor="@color/details_color"
            android:textSize="@dimen/details_size" >
        </TextView>
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:background="@color/divider_color" />

</LinearLayout>